# vender-db-clouds

./: .replit  README.md  app.py  app_backup.py  app_old.py  app_web.py  bot.session  bot.session-journal  criar_pacote_terminal.py  iniciar.sh  main.py  pyproject.toml  replit.md  telegram_bot.py  terminal.py  user_history.db
attached_assets/: Pasted--nandroid-9tXkVsyJH3l92Hol2dNxxW9adiYiSVuZro5E9MInYv79XyZCp58lD2v98LDtbjhqPMtVk1OHHExbEj8Pz99TQ--1756820062067_1756820062068.txt  Pasted-from-flask-import-Flask-request-render-template-string-send-file-import-os-app-Flask-name-1755736518973_1755736518973.txt
cloudsaqui/: README.md
uploads/: pica.txt  resultado_final.txt  teste.db
