[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "telegram>=0.0.1",
    "telethon>=1.41.0",
    "werkzeug>=3.1.3",
]
